report/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultcheck-server
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: vaultcheck
        image: ghcr.io/larsks/vaultcheck:latest
        ports:
        - name: http
          containerPort: 8080
