report/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultcheck
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
