report/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vaultcheck
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: vaultcheck
